--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,15 +1,21 @@
 [phases.setup]
-aptPkgs = [
-  "php-gd",
-  "php-intl",
-  "php-zip",
-  "php-mbstring",
-  "php-xml",
-  "php-curl"
+nixPkgs = [
+  "php",
+  "phpExtensions.intl",
+  "phpExtensions.zip",
+  "phpExtensions.gd",
+  "phpExtensions.mbstring",
+  "phpExtensions.opcache",
+  "phpExtensions.pdo_mysql"
 ]
 
-[build]
-cmd = "composer install --no-interaction --prefer-dist --optimize-autoloader"
+[phases.build]
+cmds = [
+  "composer install --no-interaction --no-dev --prefer-dist --optimize-autoloader",
+  "php artisan config:clear",
+  "php artisan config:cache",
+  "php artisan route:cache"
+]
 
 [start]
-cmd = "php artisan config:cache && php artisan route:cache && php artisan serve --host=0.0.0.0 --port=${PORT}"
+cmd = "php artisan serve --host=0.0.0.0 --port=${PORT}"
