fix: storage alias for nginx static file serving

--- a/.docker/nginx.conf
+++ b/.docker/nginx.conf
@@ -76,7 +76,7 @@ http {
     # --- File publik (PDF/PNG/dll) di public/storage → cache 7 hari ---
     # symlink: public/storage -> storage/app/public
     location /storage/ {
-      try_files $uri =404;
+      alias /app/storage/app/public/;
       access_log off;
 
       # Cache: 7 hari untuk dokumen/gambar
