perf: queue email + hash_file optimization

--- a/.docker/supervisord.conf
+++ b/.docker/supervisord.conf
@@ -15,3 +15,12 @@ priority=20
 autorestart=true
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
+
+[program:queue-worker]
+command=php /app/artisan queue:work --sleep=3 --tries=3 --timeout=90
+autostart=true
+autorestart=true
+priority=30
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
+
