fix(queue): stabilize worker + cache clear + proper mailable queue

--- a/.docker/supervisord.conf
+++ b/.docker/supervisord.conf
@@ -1,26 +1,34 @@
 [supervisord]
 nodaemon=true
 user=root
+logfile=/dev/null
+logfile_maxbytes=0
 
 [program:php-fpm]
 command=docker-php-entrypoint php-fpm
 priority=10
 autorestart=true
 stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+redirect_stderr=true
 
 [program:nginx]
 command=nginx -g "daemon off;"
 priority=20
 autorestart=true
 stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+redirect_stderr=true
 
 [program:queue-worker]
-command=php /app/artisan queue:work --sleep=3 --tries=3 --timeout=90
+command=php /app/artisan queue:work --queue=mail,default --sleep=3 --tries=3 --timeout=90 --max-time=3600 --max-jobs=1000
+priority=30
 autostart=true
 autorestart=true
-priority=30
 stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+stopwaitsecs=10
+startretries=10
+
 
