--- a/.docker/supervisord.conf
+++ b/.docker/supervisord.conf
@@ -1,34 +1,71 @@
+# [supervisord]
+# nodaemon=true
+# user=root
+# logfile=/dev/null
+# logfile_maxbytes=0
+
+# [program:php-fpm]
+# command=docker-php-entrypoint php-fpm
+# priority=10
+# autorestart=true
+# stdout_logfile=/dev/stdout
+# stdout_logfile_maxbytes=0
+# redirect_stderr=true
+
+# [program:nginx]
+# command=nginx -g "daemon off;"
+# priority=20
+# autorestart=true
+# stdout_logfile=/dev/stdout
+# stdout_logfile_maxbytes=0
+# redirect_stderr=true
+
+# [program:queue-worker]
+# command=php /app/artisan queue:work --queue=mail,default --sleep=3 --tries=3 --timeout=120 --max-time=3600 --max-jobs=1000
+# priority=30
+# autostart=true
+# autorestart=true
+# stdout_logfile=/dev/stdout
+# stdout_logfile_maxbytes=0
+# redirect_stderr=true
+# stopwaitsecs=10
+# startretries=10
+
+
+
 [supervisord]
 nodaemon=true
-user=root
-logfile=/dev/null
-logfile_maxbytes=0
+loglevel=info
 
 [program:php-fpm]
-command=docker-php-entrypoint php-fpm
-priority=10
+command=/usr/local/sbin/php-fpm -F
+autostart=true
 autorestart=true
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-redirect_stderr=true
+priority=10
 
 [program:nginx]
 command=nginx -g "daemon off;"
-priority=20
-autorestart=true
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-redirect_stderr=true
-
-[program:queue-worker]
-command=php /app/artisan queue:work --queue=mail,default --sleep=3 --tries=3 --timeout=120 --max-time=3600 --max-jobs=1000
-priority=30
 autostart=true
 autorestart=true
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-redirect_stderr=true
-stopwaitsecs=10
+priority=20
+
+; ===== QUEUE WORKER WITH HEALTHCHECK =====
+[program:queue-worker]
+command=php /app/artisan queue:work database --queue=mail,default --sleep=1 --tries=3 --timeout=90
+directory=/app
+autostart=true
+autorestart=true
 startretries=10
+stopwaitsecs=30
+user=www-data
+redirect_stderr=true
+stdout_logfile=/app/storage/logs/queue.log
+
+; Restart if resource usage grows too high
+; (prevents memory leak hang)
+startsecs=5
+exitcodes=0,2
+; If queue job crashes hard → restart
+
 
 
